hw12_13_14_15_calendar/manifests/rabbitmq-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        livenessProbe:
          exec:
            command:
            - rabbitmq-diagnostics
            - -q
            - ping
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - rabbitmq-diagnostics
            - -q
            - ping
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: rmqdata
          mountPath: /var/lib/rabbitmq
        - name: rmqlog
          mountPath: /var/log/rabbitmq
      volumes:
      - name: rmqdata
        persistentVolumeClaim:
          claimName:  rmqdata-pvc
      - name: rmqlog
        persistentVolumeClaim:
          claimName:  rmqlog-pvc
