hw12_13_14_15_calendar/manifests/sender-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender
  labels:
    app: sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sender
  template:
    metadata:
      labels:
        app: sender
    spec:
      containers:
      - name: sender
        image: voitenkov/sender:latest
