hw12_13_14_15_calendar/manifests/calendar-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: calendar-http
   labels:
     app: calendar-http
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
      protocol: TCP
      targetPort: 8080
  selector:
    app: calendar
---
apiVersion: v1
kind: Service
metadata:
   name: calendar-grpc
   labels:
     app: calendar-grpc
spec:
  type: NodePort
  ports:
    - port: 8081
      nodePort: 30081
      protocol: TCP
      targetPort: 8081
  selector:
    app: calendar
---
apiVersion: v1
kind: Service
metadata:
   name: calendar
   labels:
     app: calendar
spec:
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
    - port: 8081
      name: grpc
      protocol: TCP
      targetPort: 8081
  selector:
    app: calendar
